# Privacy-Preserving-Healthcare-Analytics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.history/: drive_connect_20250811161532.py  drive_connect_20250811162519.py  pyproject_20250811144246.toml
.history/poweranger/: __init___20250811142717.py
.history/poweranger/client/: data_loader_20250811154449.py
.history/poweranger/server/: server_app_20250811143413.py  server_app_20250811144259.py  server_app_20250811160216.py  server_app_20250811161417.py  server_app_20250811161615.py
poweranger/client/: client_app.py  client_fl_client.py  client_improved.py  local_training.py  simulate_tf_client.py
poweranger/server/: aggregation.py  model.py  utils.py
poweranger/web_ui/: web_app_improved.py
poweranger/web_ui/static/css/: dashboard_improved.css
poweranger/web_ui/static/js/: dashboard_improved.js
poweranger/web_ui/templates/: dashboard_improved.html
results/metrics/: eval_client_metrics.csv  eval_metrics.csv  fit_client_metrics.csv
