[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poweranger"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "silvernager"

[tool.flwr.app.components]
serverapp = "poweranger.server.server_app:app"
clientapp = "poweranger.client.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.3
local-epochs = 1
batch-size = 16
verbose = 0
image-size = 96

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
